--- a/azure.yaml
+++ b/azure.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
-name: azure-openai-keyless
+name: azure-openai-keyless-python
 metadata:
-  template: azure-openai-keyless@0.0.4
+  template: azure-openai-keyless-python@0.0.4
